# rust-ebpf-localnet-kernel-filter-study

./: .gitignore  README.md
.forgejo/workflows/: build-net-tc-filter.yml  build-sock-filter.yml  build-uprobe-libcall-filter.yml
.github/workflows/: build-localnet-filter.yml  build-net-tc-filter.yml  build-sock-filter.yml  build-uprobe-libcall-filter.yml
conf/: localnet-filter.yml  net-tc-filter.yml  sock-filter.yml  syscall-filter.yml  uprobe-libcall-filter.yml
localnet-filter/: Cargo.toml
localnet-filter-common/src/: lib.rs
localnet-filter-ebpf/: Cargo.toml
localnet-filter-ebpf/src/: bindings.rs  main.rs
localnet-filter/localnet-filter-app/: Cargo.toml
localnet-filter/localnet-filter-app/src/: main.rs  user.rs
localnet-filter/localnet-filter-common/: Cargo.toml
localnet-filter/localnet-filter-common/src/: lib.rs
localnet-filter/localnet-filter-ebpf/src/: main.rs
localnet-filter/src/: conf.rs  main.rs  net.rs  network.rs  user.rs
net-tc-filter/: README.md
net-tc-filter/net-tc-filter-app/: Cargo.toml
net-tc-filter/net-tc-filter-app/src/: conf.rs  main.rs  network.rs  user.rs
net-tc-filter/net-tc-filter-common/: Cargo.toml
net-tc-filter/net-tc-filter-common/src/: lib.rs
net-tc-filter/net-tc-filter-ebpf/: Cargo.toml
net-tc-filter/net-tc-filter-ebpf/src/: bindings.rs  main.rs
sock-filter/: README.md
sock-filter/sock-filter-app/: Cargo.toml
sock-filter/sock-filter-app/src/: conf.rs  main.rs  network.rs  user.rs
sock-filter/sock-filter-common/: Cargo.toml
sock-filter/sock-filter-common/src/: lib.rs
sock-filter/sock-filter-ebpf/: Cargo.toml
sock-filter/sock-filter-ebpf/src/: bindings.rs  main.rs
sock-filter/xtask/: Cargo.toml
sock-filter/xtask/src/: codegen.rs  main.rs
uprobe-libcall-filter/: README.md
uprobe-libcall-filter/uprobe-libcall-filter-app/: Cargo.toml
uprobe-libcall-filter/uprobe-libcall-filter-app/src/: conf.rs  main.rs
uprobe-libcall-filter/uprobe-libcall-filter-common/: Cargo.toml
uprobe-libcall-filter/uprobe-libcall-filter-common/src/: lib.rs
uprobe-libcall-filter/uprobe-libcall-filter-ebpf/: Cargo.toml  rust-toolchain.toml
uprobe-libcall-filter/uprobe-libcall-filter-ebpf/src/: main.rs
