[package]
name = "localnet-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = {version="0.1"}
bytes = {version = "1"}
clap = { version = "3.1", features = ["derive"] }
libc = {version="0.2"}
localnet-filter-common = { path = "../localnet-filter-common", features=["user"] }
log = {version="0.4"}
serde = {version="1.0.142", features = ["derive"] }
serde_yaml = {version = "0.8.26"}
simplelog = {version="0.12"}
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "localnet-filter"
path = "src/main.rs"