[package]
name = "net-tc-filter-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
aya = { version = "0.13.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
bytes = {version = "1"}
clap = { version = "4.5", features = ["derive"] }
libc = {version="0.2"}
net-tc-filter-common = { path = "../net-tc-filter-common", features=["user"] }
log = {version="0.4"}
serde = {version="1.0.218", features = ["derive"] }
serde_yaml = {version = "0.9.16"}
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
env_logger = "0.11"

[dev-dependencies]
rand = {version="0.8.5", features = ["small_rng"]}

[[bin]]
name = "net-tc-filter-app"
path = "src/main.rs"