[package]
name = "net-tc-filter-common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
user = [ "aya" ]


[dependencies]
aya = { version = "0.13.1", default-features = false , optional = true }

[lib]
path = "src/lib.rs"