[package]
name = "uprobe-libcall-filter-common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
user = [ "aya" ]


[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true }


[lib]
path = "src/lib.rs"