[package]
name = "uprobe-libcall-filter-ebpf"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log-ebpf = { version = "0.1.0", default-features = false }
aya-ebpf-bindings = { version = "0.1.1", default-features = false }
uprobe-libcall-filter-common = { path = "../uprobe-libcall-filter-common" }
memoffset = "0.9"

[[bin]]
name = "uprobe-libcall-filter"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []